--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>배경 이미지 삽입</title>
     <style>
         body {
-            background-image: url(jpg/bg.jpg);
+            background-image: url('./bird.jpg');
         }
         h3 {
             background-color: yellow;
